<resources>
    <string name="app_name">Book of countries</string>
    <string name="error_internet_not_available">Internet is not available</string>
    <string name="error_server_not_available">Server is not available</string>
    <string name="error_server">Servers error</string>
    <string name="error">Unexpected error</string>
    <string name="capital">Capital:</string>
    <string name="region">Region:</string>
    <string name="language">Language:</string>
    <string name="currency">Currency:</string>
    <string name="block">Bloc:</string>
    <string name="population">Population:</string>
    <string name="area">Area,  km<sup><small>2</small></sup>  :</string>
    <string name="gini">Index gini:</string>
    <string name="calling_code">Calling code:</string>
    <string name="domain">Domain:</string>
    <string name="alpha2code">Alpha-2 code:</string>
    <string name="alpha3code">Alpha-3 code:</string>
    <string name="time_zone">Time zone:</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind speed</string>
    <string name="pressure">pressure</string>
    <string name="sunset">sunset</string>
    <string name="sunrise">sunrise</string>
    <string name="title_activity_maps">Map</string>

    <string name="full_list_select">Full list</string>
    <string name="region_select">Region</string>
    <string name="language_select">Language</string>
    <string name="currency_select">Currency</string>
    <string name="regional_block_select">Regional block</string>


    <!--Banner-->
    <string name="main_book_block">ca-app-pub-7982947060816171/5779260319</string>

    <string name="test_banner">ca-app-pub-3940256099942544/6300978111</string>



</resources>
