<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_effect_border"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brothersoft.bookofcountries.presentation.screens.selection.SelectionActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        style="@style/Toolbar"
        android:layout_height="wrap_content">

        <TextView
           style="@style/ToolbarTextStyle"
            android:text="Book of countries"/>

    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/full_list_button"
        style="@style/SelectionButtonStyle"
        android:layout_marginTop="100dp"
        android:text="@string/full_list_select" />

    <Button
        android:id="@+id/region_button"
        style="@style/SelectionButtonStyle"
        android:text="@string/region_select" />

    <Button
        android:id="@+id/language_button"
        style="@style/SelectionButtonStyle"
        android:text="@string/language_select" />

    <Button
        android:id="@+id/currency_button"
        style="@style/SelectionButtonStyle"
        android:text="@string/currency_select" />

    <Button
        android:id="@+id/regional_block_button"
        style="@style/SelectionButtonStyle"
        android:text="@string/regional_block_select" />
</LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/main_book_block">
    </com.google.android.gms.ads.AdView>
</FrameLayout>