<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.brothersoft.bookofcountries.presentation.screens.country.capital.CapitalViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yelow_effect">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yelow_effect"
                android:orientation="vertical">

                <TextView
                    style="@style/BaseCapitalTextViewStyle"
                    android:text="@{viewModel.capital}"
                    android:textSize="50dp" />

                <TextView
                    style="@style/BaseCapitalTextViewStyle"
                    android:text="@{viewModel.country}"
                    android:textSize="35dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/yelow_effect"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:imageWeather="@{viewModel.weatherImageUrl}" />

                <TextView
                    style="@style/BaseCapitalTextViewStyle"
                    android:text="@{viewModel.temp}"
                    android:textSize="40dp" />

                <TextView
                    style="@style/BaseCapitalTextViewStyle"
                    android:text="@{viewModel.clouds}"
                    android:textSize="20dp" />
            </LinearLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <LinearLayout style="@style/TableRawLayoutStyle">

                        <ImageView
                            style="@style/TableRowImageStyle"
                            android:src="@drawable/wind_image" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@string/wind_speed" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@{viewModel.windSpeed}" />

                    </LinearLayout>

                    <LinearLayout style="@style/TableRawLayoutStyle">

                        <ImageView
                            style="@style/TableRowImageStyle"
                            android:src="@drawable/pressure_image" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@string/pressure" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@{viewModel.pressure}" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <LinearLayout style="@style/TableRawLayoutStyle">

                        <ImageView
                            style="@style/TableRowImageStyle"
                            android:src="@drawable/humidity_image" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@string/humidity" />

                        <TextView
                            style="@style/TableRowTextViewStyle"
                            android:text="@{viewModel.humidity}" />

                    </LinearLayout>

                    <LinearLayout style="@style/TableRawLayoutStyle">

                        <ImageView
                            style="@style/TableRowImageStyle"
                            android:src="@drawable/sunset_image" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"

                                android:orientation="vertical">

                                <TextView
                                    style="@style/TableRowTextViewStyle"
                                    android:layout_weight="1"
                                    android:text="@string/sunrise"
                                    />

                                <TextView
                                    style="@style/TableRowTextViewStyle"
                                    android:layout_weight="1"
                                    android:text="@{viewModel.sunrise}"
                                    />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TableRowTextViewStyle"
                                    android:layout_weight="1"
                                    android:text="@string/sunset"
                                    />

                                <TextView
                                    style="@style/TableRowTextViewStyle"
                                    android:layout_weight="1"
                                    android:text="@{viewModel.sunset}"
                                    />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</layout>